--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,10 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<h1>YAHOO</h1>
+<p>
+  Username: {{model.login}}
+</p>
+<p>
+  Avatar: <img src={{model.avatar_url}} width="32" height="32">
+</p>
+<p>
+  # of Public Repos: {{model.public_repos}}
+</p>{{outlet}}
